     (bug #12297).
   * Fixed wesnoth not to try to add duplicate ids to unit_map
   * Fixed a bug where the old unit type's abilities and attacks weren't
     completely cleared during level-up
   * Improved performance of 'recall' user action when disallow_recall
     is set to true in scenarios.
   * Various code cleanups

Version 1.5.4:
 * Editor2:
   * Rotate clipboard 60 deg. cw/ccw, ctrl+r/ctrl+shift+r respectively
     (cmd instead of ctrl on Mac). Active in the "paste" mode.
   * A drag operation only creates one undo action instead of many.
   * Partial undo feature to keep the old behavior of drag undo available
   * More visible selection - draw a special overlay on every selected hex.
   * Allow different map generators to be used in map -> generate map
     (FR #3950)
   * Reverse the preprocessor logic in src/ to default to building editor2,
     with a DISABLE_EDITOR2 define to build without it.
 * Graphics:
   * New portraits: Silver Mage (male), Mage of Light (male).
 * Language and i18n:
   * updated translations: Chinese (Traditional), Czech, French, Galician,
     German, Hungarian, Italian, Lithuanian, Polish
 * Music and sound effects:
   * Added a new music track "The Dangerous Symphony" by Gianmarco Leone.
 * Units:
   * Balancing changes:
     * Made units with the healthy trait take half the damage from poison.
     * Decreased the ranged attack of the Bowman from 7-3 to 6-3.
     * Added the marksman special to the ranged attack of the Orcish Assassin
       line.
     * Decreased the melee attack of the Orcish Assassin from 8-1 to 7-1.
     * Decreased the melee attack of the Orcish Slayer from 10-2 to 9-2.
     * Increased the cost of the Walking Corpse from 7 to 8.
     * Increased the cost of the Soulless from 11 to 13.
 * User interface:
   * Made the "slowed", "poisoned" and "stone" floating label translatable
     according to the affected unit's gender. (bug/feature #11957