@@ -47,6 +47,8 @@ Version 1.5.4+svn:
    * Improved performance of 'recall' user action when disallow_recall
      is set to true in scenarios.
    * Various code cleanups
+   * Removed the requirement for files in ~campaigns to have a corresponding
+     directory.
 
 Version 1.5.4:
  * Editor2:
